--- a/MSAUniApp/Index.html
+++ b/MSAUniApp/Index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Students</title>
+    <title>Course</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="Content/bootstrap.min.css" />
     <link rel="stylesheet" href="Content/style.css"/>
@@ -20,7 +20,7 @@
                 </div>
                 <div>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Students</a></li>
+                        <li class="active"><a href="#">Courses</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <div class="container">
-        <a href="Create.html">+ Create a student</a>
+        <a href="Create.html">+ Create a Course</a>
         <div class="table-responsive">
             <table class="table table-striped spaced-table table-hover hidden" id="tblcourse">
                 <thead>
