--- a/MSAUniApp/Index.html
+++ b/MSAUniApp/Index.html
@@ -33,17 +33,17 @@
     <div class="container">
         <a href="Create.html">+ Create a Course</a>
         <div class="table-responsive">
-            <table class="table table-striped spaced-table table-hover hidden" id="tblcourse">
+            <table class="table table-striped spaced-table table-hover hidden" id="tblstudent">
                 <thead>
                     <tr>
-                        <th>Course Name</th>
-                        <th>Credits</th>
-                        <th></th>
+                        <th>Last Name</th>
+                        <th>First Name</th>
+                        <th>Enrollment Date</th>
                         <th></th>
                         <th></th>
                     </tr>       
                 </thead>
-                <tbody id="tblcoursecontent">
+                <tbody id="tblstudentcontent">
                 </tbody>
             </table>
             <p id="loadingmsg">Students table loading...</p>
