--- a/MSAUniApp/Create.html
+++ b/MSAUniApp/Create.html
@@ -31,17 +31,20 @@
     </header>
     <div class="container">
         <a href="index.html">Back to home</a>
-        <h2>Create Course</h2>
+        <h2>Create student</h2>
         <form role="form" name="create">
             <div class="form-group">
-                <label for="Titleinput">Title:</label>
-                <input type="text" class="form-control" id="Titleinput" required/>
+                <label for="lastnameinput">Last name:</label>
+                <input type="text" class="form-control" id="LastNameinput" required/>
             </div>
             <div class="form-group">
-                <label for="Creditinput">Credits:</label>
-                <input type="text" class="form-control" id="Creditinput" required/>
+                <label for="firstnameinput">First name:</label>
+                <input type="text" class="form-control" id="FirstNameinput" required/>
             </div>
-
+            <div class="form-group">
+                <label for="enrollmentdateinput">Enrollment date:</label>
+                <input type="text" class="form-control" id="EnrollmentDateinput" required/>
+            </div>
             <div class="btn-toolbar">
                 <button type="submit" class="btn btn-default">Submit</button>
                 <button type="button" class="btn btn-default" id="btncancel">Cancel</button>
