--- a/MSAUniApp/Edit.html
+++ b/MSAUniApp/Edit.html
@@ -34,12 +34,16 @@
         <h2>Edit student details</h2>
         <form role="form" name="edit" class="hidden">
             <div class="form-group">
-                <label for="lastnameinput">Title:</label>
-                <input type="text" class="form-control" id="Titleinput" required />
+                <label for="lastnameinput">Last name:</label>
+                <input type="text" class="form-control" id="LastNameinput" required/>
             </div>
             <div class="form-group">
-                <label for="firstnameinput">Credits:</label>
-                <input type="text" class="form-control" id="Creditinput" required />
+                <label for="firstmidnameinput">First name:</label>
+                <input type="text" class="form-control" id="FirstMidNameinput" required/>
+            </div>
+            <div class="form-group">
+                <label for="enrollmentdateinput">Enrollment date:</label>
+                <input type="text" class="form-control" id="EnrollmentDateinput" required/>
             </div>
             <div class="btn-toolbar">
                 <button type="submit" class="btn btn-default">Submit</button>
