Course list displays now!!!

--- a/MSAUniApp/Index.html
+++ b/MSAUniApp/Index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Course</title>
+    <title>Courses</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="Content/bootstrap.min.css" />
     <link rel="stylesheet" href="Content/style.css"/>
@@ -33,17 +33,15 @@
     <div class="container">
         <a href="Create.html">+ Create a Course</a>
         <div class="table-responsive">
-            <table class="table table-striped spaced-table table-hover hidden" id="tblstudent">
+            <table class="table table-striped spaced-table table-hover hidden" id="tblcourse">
                 <thead>
                     <tr>
-                        <th>Last Name</th>
-                        <th>First Name</th>
-                        <th>Enrollment Date</th>
-                        <th></th>
+                        <th>Course Name</th>
+                        <th>Credits</th>
                         <th></th>
                     </tr>       
                 </thead>
-                <tbody id="tblstudentcontent">
+                <tbody id="tblcoursecontent">
                 </tbody>
             </table>
             <p id="loadingmsg">Students table loading...</p>
