--- a/MSAUniApp/Create.html
+++ b/MSAUniApp/Create.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Create student</title>
+    <title>Create course</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="Content/bootstrap.min.css" />
     <link rel="stylesheet" href="Content/style.css" />
@@ -19,7 +19,7 @@
                 </div>
                 <div>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Students</a></li>
+                        <li class="active"><a href="#">Courses</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -31,20 +31,17 @@
     </header>
     <div class="container">
         <a href="index.html">Back to home</a>
-        <h2>Create student</h2>
+        <h2>Create course</h2>
         <form role="form" name="create">
             <div class="form-group">
-                <label for="lastnameinput">Last name:</label>
-                <input type="text" class="form-control" id="LastNameinput" required/>
+                <label for="titleinput">Course Title:</label>
+                <input type="text" class="form-control" id="titleinput" required/>
             </div>
             <div class="form-group">
-                <label for="firstnameinput">First name:</label>
-                <input type="text" class="form-control" id="FirstNameinput" required/>
+                <label for="creditinput">Credits:</label>
+                <input type="text" class="form-control" id="creditinput" required/>
             </div>
-            <div class="form-group">
-                <label for="enrollmentdateinput">Enrollment date:</label>
-                <input type="text" class="form-control" id="EnrollmentDateinput" required/>
-            </div>
+
             <div class="btn-toolbar">
                 <button type="submit" class="btn btn-default">Submit</button>
                 <button type="button" class="btn btn-default" id="btncancel">Cancel</button>
