Trying to get edit/delete buttons showing up

--- a/MSAUniApp/Index.html
+++ b/MSAUniApp/Index.html
@@ -38,7 +38,8 @@
                     <tr>
                         <th>Course Name</th>
                         <th>Credits</th>
-                        <th></th>
+                        <th>Edit</th>
+                        <th>Delete</th>
                     </tr>       
                 </thead>
                 <tbody id="tblcoursecontent">
