--- a/MSAUniApp/Create.html
+++ b/MSAUniApp/Create.html
@@ -34,6 +34,10 @@
         <h2>Create course</h2>
         <form role="form" name="create">
             <div class="form-group">
+                <label for="courseidinput">Course ID:</label>
+                <input type="text" class="form-control" id="courseidinput" required/>
+            </div>
+            <div class="form-group">
                 <label for="titleinput">Course Title:</label>
                 <input type="text" class="form-control" id="titleinput" required/>
             </div>
