--- a/MSAUniApp/Edit.html
+++ b/MSAUniApp/Edit.html
@@ -35,7 +35,7 @@
         <form role="form" name="edit" class="hidden">
             <div class="form-group">
                 <label for="lastnameinput">Last name:</label>
-                <input type="text" class="form-control" id="LastNameinput" required/>
+                <input type="text" class="form-control" id="Cour" required/>
             </div>
             <div class="form-group">
                 <label for="firstmidnameinput">First name:</label>
