Revert "coursees display correctly, adding courses works, need to figure out editing"
This reverts commit 6f2259d1bb6068a37f35e1a01c11c2490282c50f.

--- a/MSAUniApp/Index.html
+++ b/MSAUniApp/Index.html
@@ -33,10 +33,9 @@
     <div class="container">
         <a href="Create.html">+ Create a Course</a>
         <div class="table-responsive">
-            <table class="table table-striped spaced-table table-hover" id="tblcourse">
+            <table class="table table-striped spaced-table table-hover hidden" id="tblcourse">
                 <thead>
                     <tr>
-                        <th>Course ID</th>
                         <th>Course Name</th>
                         <th>Credits</th>
                         <th>Edit</th>
@@ -46,6 +45,7 @@
                 <tbody id="tblcoursecontent">
                 </tbody>
             </table>
+            <p id="loadingmsg">Students table loading...</p>
         </div>
     </div>
 </body>
