Tried to do autoincrementing courseids, didn't work.

--- a/MSAUniApp/Index.html
+++ b/MSAUniApp/Index.html
@@ -33,9 +33,10 @@
     <div class="container">
         <a href="Create.html">+ Create a Course</a>
         <div class="table-responsive">
-            <table class="table table-striped spaced-table table-hover hidden" id="tblcourse">
+            <table class="table table-striped spaced-table table-hover " id="tblcourse">
                 <thead>
                     <tr>
+                        <th>Course ID</th>
                         <th>Course Name</th>
                         <th>Credits</th>
                         <th>Edit</th>
