--- a/MSAUniApp/Edit.html
+++ b/MSAUniApp/Edit.html
@@ -31,20 +31,21 @@
     </header>
     <div class="container">
         <a href="index.html">Back to home</a>
-        <h2>Edit student details</h2>
-        <form role="form" name="edit" class="hidden">
+        <h2>Edit course details</h2>
+        <form role="form" name="edit" class="">
             <div class="form-group">
-                <label for="lastnameinput">Last name:</label>
-                <input type="text" class="form-control" id="Cour" required/>
+                <label for="courseidinput">Course ID:</label>
+                <input type="text" class="form-control" id="Courseidinput" />
             </div>
             <div class="form-group">
-                <label for="firstmidnameinput">First name:</label>
-                <input type="text" class="form-control" id="FirstMidNameinput" required/>
+                <label for="coursetitleinput">Course Title:</label>
+                <input type="text" class="form-control" id="Titleinput" required/>
             </div>
             <div class="form-group">
-                <label for="enrollmentdateinput">Enrollment date:</label>
-                <input type="text" class="form-control" id="EnrollmentDateinput" required/>
+                <label for="coursecreditsinput">Credits:</label>
+                <input type="text" class="form-control" id="Creditsinput" required/>
             </div>
+
             <div class="btn-toolbar">
                 <button type="submit" class="btn btn-default">Submit</button>
                 <button type="button" class="btn btn-default" id="btncancel">Cancel</button>
