--- a/MSAUniApp/Index.html
+++ b/MSAUniApp/Index.html
@@ -12,11 +12,36 @@
 
 </head>
 <body>
+    <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1502057980090120',
+      xfbml      : true,
+      version    : 'v2.5'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+    </script>
+
+    <script>
+        FB.getLoginStatus(function (response) {
+            statusChangeCallback(response);
+        });
+        console.log(response);
+    </script>
+
     <header>
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">MSA demo</a>
+                    <a class="navbar-brand" href="#">University of Contoso</a>
                 </div>
                 <div>
                     <ul class="nav navbar-nav">
