--- a/MSAUniApp/Detail.html
+++ b/MSAUniApp/Detail.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Student details</title>
+    <title>Course details</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="Content/bootstrap.min.css" />
     <link rel="stylesheet" href="Content/style.css" />
@@ -33,13 +33,16 @@
     <div class="container">
         <a href="index.html">Back to home</a>
         <p id="loadingmsg">Student details loading...</p>
-        <h2>Student details</h2>
-        <p><b>Student last name:</b></p>
-        <p id="LastName"></p>
-        <p><b>Student first name:</b></p>
-        <p id="FirstMidName"></p>
-        <p><b>Student enrollment date:</b></p>
-        <p id="EnrollmentDate"></p>
+        <h2>Course details</h2>
+        <p><b>Course ID:</b></p>
+        <p id="courseid"></p>
+        <p><b>Course Title:</b></p>
+        <p id="coursetitle"></p>
+        <p><b>Course Credits:</b></p>
+        <p id="coursecredits"></p>
+        <p><b>Assessment Items:</b></p>
+        <p><ul id="assessmentitems"></ul></p>
+
     </div>
 </body>
 </html>
