--- a/MSAUniApp/Edit.html
+++ b/MSAUniApp/Edit.html
@@ -46,6 +46,11 @@
                 <label for="coursecreditsinput">Credits:</label>
                 <input type="text" class="form-control" id="Creditsinput" required/>
             </div>
+            <div class="form-group">
+                <label for="assessmentitemsinput">Assessment items (enter each on a new line): </label>
+                <br />
+                <textarea id="assessmentitemsinput" form="create" rows="6"></textarea>
+            </div>
 
             <div class="btn-toolbar">
                 <button type="submit" class="btn btn-default">Submit</button>
