about to change to a new database to hopefully fix model 500 errors

--- a/MSAUniApp/Create.html
+++ b/MSAUniApp/Create.html
@@ -48,9 +48,9 @@
                 <input type="text" class="form-control" id="creditinput" required/>
             </div>
             <div class="form-group">
-                <label for="assessmentitemsinput">Assessment items (enter each on a new line): </label>
+                <label for="assessmentiteminput">Assessment item: </label>
                 <br />
-                <textarea id="assessmentitemsinput" form="create" rows="6" ></textarea>
+                <input type="text" class="form-control" id="assessmentiteminput" required />
             </div>
 
             <div class="btn-toolbar">
