--- a/MSAUniApp/Edit.html
+++ b/MSAUniApp/Edit.html
@@ -47,9 +47,9 @@
                 <input type="text" class="form-control" id="Creditsinput" required/>
             </div>
             <div class="form-group">
-                <label for="assessmentitemsinput">Assessment items (enter each on a new line): </label>
+                <label for="assessmentiteminput">Assessment item: </label>
                 <br />
-                <textarea id="assessmentitemsinput" form="create" rows="6"></textarea>
+                <input type="text" class="form-control" id="assessmentiteminput" required />
             </div>
 
             <div class="btn-toolbar">
